# mydoo

./: .gitignore  .gitmodules  .lintstagedrc  .lintstagedrc.js  .ls-lint.toml  .ls-lint.yml  .prettierignore  .prettierrc  .prototools  .rust-line-count-exceptions.toml  .syncpackrc  AGENTS.md  AGENTS_DIOXUS.md  BIN_CRATE_PUB_VISIBILITY_PLAN.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  PLAN.md  STACK_COMPONENT_PLAN.md  TODO.md  biome.json  clippy.toml  commitlint.config.mjs  commitlint.config.ts  eslint.config.js  eslint.config.mjs  implementation_plan.md  index.html  justfile  knip.json  lint-staged.config.js  manifest.json  moon.yml  package.json  patch_e2e.patch  patch_e2e2.patch  pnpm-lock.yaml  pnpm-workspace.yaml  pwa-glue.js  renovate.json  (+8 more)
crates/tasklens-core/: Cargo.toml
crates/tasklens-core/src/: lib.rs  types.rs
crates/tasklens-core/src/domain/: actions.rs  balance.rs  balance_distribution.rs  constants.rs  creation.rs  dates.rs  dispatch.rs  doc_bridge.rs  feedback.rs  hierarchy.rs  lifecycle.rs  mod.rs  priority.rs  readiness.rs  routine_tasks.rs  validation_tests.rs  visibility.rs
crates/tasklens-core/src/types/: mod.rs  persistent.rs  transient.rs
crates/tasklens-core/src/utils/: time.rs
crates/tasklens-core/tests/: backup_test.rs  compliance.rs  enum_serialization_parity.rs  fixture_validation.rs  prop_serialization.proptest-regressions  prop_serialization.rs  security_limits.rs  security_redaction.rs
crates/tasklens-core/tests/compliance/fixtures/: balance-aggregation.feature.json  balancing.feature.json  balancing.feature.yaml  boost-importance.feature.json  boost-lead-time.feature.json  boost-lead-time.feature.yaml  completion-acknowledgement.feature.json  completion-acknowledgement.feature.yaml  complex-mutation.feature.json  container-visibility.feature.json  container-visibility.feature.yaml  credit-attribution-aggregation.feature.json  credit-attribution.feature.json  credit-attribution.feature.yaml  decay.feature.json  deletion.feature.json  due_dates.feature.json  inheritance-credits.feature.json  inheritance-importance.feature.json  lead-time.feature.json  (+33 more)
crates/tasklens-core/tests/fixtures/: medieval_tasks.json
crates/tasklens-store/: Cargo.toml
crates/tasklens-store/benches/: import_benchmark.rs
crates/tasklens-store/proptest-regressions/store/: tests_fuzz.txt  tests_merge.txt
crates/tasklens-store/src/: actions.rs  adapter.rs  crypto.rs  debug_utils.rs  doc_id.rs  lib.rs  network.rs  profiling.rs  samod_runtime.rs  samod_storage.rs  storage.rs  store.rs  sync.rs
crates/tasklens-store/src/store/: test_common.rs  tests.rs  tests_async.rs  tests_fuzz.rs  tests_merge.rs
crates/tasklens-store/tests/: cross_compat_fuzz.rs  golden_reconciliation.rs  load_backup.rs
crates/tasklens-store/tests/data/: golden.automerge
crates/tasklens-sync-protocol/: Cargo.toml
crates/tasklens-sync-protocol/src/: client.rs  lib.rs
crates/tasklens-sync-server/: Cargo.toml
crates/tasklens-sync-server/src/: db.rs  main.rs
crates/tasklens-sync-server/tests/: integration_test.rs
crates/tasklens-ui/: .gitignore  .prettierignore  AGENTS.md  Cargo.toml  Dioxus.toml  build.rs  dioxus-vendor-components.toml  index.html  package.json  playwright.config.ts  tailwind.css  tsconfig.json
crates/tasklens-ui/.gemini/: styleguide.md
crates/tasklens-ui/assets/: app.css  tailwind.css
crates/tasklens-ui/public/: manifest.json  pwa-glue.js  service-worker.js  version.js
crates/tasklens-ui/src/: check_samod.rs  main.rs  router.rs  seed.rs
crates/tasklens-ui/src/app_components/: alert.rs  app_navbar.css  app_navbar.rs  app_navbar.rs.orig  app_panel.css  app_panel.rs  back_button.css  back_button.rs  balance_slider.rs  date_input.css  date_input.rs  date_time_input.css  date_time_input.rs  doc_id_manager.css  doc_id_manager.rs  empty_state.rs  form_controls.css  form_controls.rs  load_error_view.css  load_error_view.rs  loading.rs  loading_style.css  mod.rs  move_picker.css  move_picker.rs  page_header.css  page_header.rs  priority_task_row.css  priority_task_row.rs  search_panel.css  search_panel.rs  search_panel.rs.orig  sync_indicator.css  sync_indicator.rs  task_editor.css  task_editor.rs  task_input.css  task_input.rs  task_input.rs.orig  task_row.css  (+1 more)
crates/tasklens-ui/src/components/: alert.rs  app_navbar.rs  balance_slider.rs  button.rs  checkbox.rs  doc_id_manager.rs  input.rs  load_error_view.rs  loading.rs  mod.rs  move_picker.rs  page_header.rs  priority_task_row.rs  search_panel.rs  sync_indicator.rs  task_editor.rs  task_input.rs  task_row.rs
crates/tasklens-ui/src/controllers/: doc_controller.rs  mod.rs  task_controller.rs
crates/tasklens-ui/src/dioxus_components/: README.md  mod.rs
crates/tasklens-ui/src/hooks/: mod.rs  use_balance_data.rs  use_balance_interaction.rs  use_e2e_setup.rs  use_persistence.rs  use_prioritized_tasks.rs  use_score_trace.rs  use_sync.rs  use_tunnel_state.rs
crates/tasklens-ui/src/utils/: async_utils.rs  dioxus_runtime.rs  mod.rs  profiling.rs  time_conversion.rs
crates/tasklens-ui/src/views/: auth.css  auth.rs  balance_page.css  balance_page.rs  do_page.css  do_page.rs  mod.rs  plan_page.css  plan_page.rs  score_trace_page.css  score_trace_page.rs  settings_page.css  settings_page.rs  task_page.css  task_page.rs
crates/tasklens-ui/tests/e2e/: README.md  fixtures.ts  global.setup.ts  multi-user.test.ts  playwright.d.ts  snapshot-paths.ts  sync.spec.ts
xtask/: Cargo.toml
xtask/config/: dead-components.toml  vendored-boundary.allowlist
xtask/src/: main.rs
xtask/src/commands/: check_bin_pub_visibility.rs  check_biome_schema.rs  check_catalog.rs  check_context.rs  check_dark_mode.rs  check_dead_components.rs  check_dioxus_lock_pin.rs  check_filenames.rs  check_rust_line_count.rs  check_rust_token_count.rs  check_vendored_boundaries.rs  dioxus_info.rs  dioxus_lock.rs  fix_junit.rs  lint_context.rs  lint_dark_mode.rs  lint_filenames.rs  mod.rs  rust_tokens.rs  update_dioxus_components.rs
xtask/src/commands/dx_components/: UPSTREAM_ATTRIBUTION.md  installer.rs  manifest.rs  mod.rs  registry.rs  vendor.rs
(+1253 files in other folders)
