[workspace]
resolver = "2"
members = [
  "crates/tasklens-core",
  "crates/tasklens-store",
  "crates/tasklens-sync-protocol",
  "crates/tasklens-sync-server",
  "crates/tasklens-ui",
]

[workspace.lints.clippy]
cognitive_complexity = "warn"
too_many_arguments = "warn"
type_complexity = "warn"

[workspace.package]
version = "0.1.0"
authors = ["Matt Armstrong <matt@rfc20.org>"]
edition = "2024"

[workspace.dependencies]
tasklens-core = { path = "crates/tasklens-core", version = "0.1.0" }
tasklens-store = { path = "crates/tasklens-store", version = "0.1.0" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1.19.0", features = ["v4", "serde", "js"] }
tracing = "0.1"
futures = "0.3"
dioxus = { version = "0.7.1" }
dioxus-logger = "0.7.2"
automerge = { version = "0.7.2" }
autosurgeon = "0.10.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
console_error_panic_hook = "0.1.7"


[profile.dev]
debug = true
split-debuginfo = "off"

[patch.crates-io]
samod = { path = "reference_repos/samod/samod" }
samod-core = { path = "reference_repos/samod/samod-core" }
