[workspace]
resolver = "2"
members = [
  "crates/tasklens-core",
  "crates/tasklens-store",
  "crates/tasklens-ui",
]

[workspace.lints.rust]
unreachable_pub = "warn"

[workspace.lints.clippy]
# cognitive_complexity = "warn"
redundant_pub_crate = "warn"
# too_many_arguments = "warn"
# type_complexity = "warn"

[workspace.package]
version = "0.1.0"
authors = ["Matt Armstrong <matt@rfc20.org>"]
edition = "2024"

[workspace.dependencies]
tasklens-core = { path = "crates/tasklens-core", version = "0.1.0" }
tasklens-store = { path = "crates/tasklens-store", version = "0.1.0" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1.19.0", features = ["v4", "serde", "js"] }
tracing = "0.1"
futures = "0.3"
dioxus = { version = "0.7.1" }
dioxus-logger = "0.7.2"
automerge = { version = "0.7.2" }
autosurgeon = "0.10.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
# getrandom 0.3 is the primary version (e.g. for rand 0.9)
getrandom-v3 = { package = "getrandom", version = "0.3.4", features = ["wasm_js"] }
# getrandom 0.2 is required by legacy/transitive dependencies (e.g. rand 0.8, uuid 1.x)
# that need the "js" feature enabled for WASM support.
getrandom-v2 = { package = "getrandom", version = "0.2.17", features = ["js"] }
scopeguard = "1.2.0"
console_error_panic_hook = "0.1.7"
samod = { git = "https://github.com/matta/samod", branch = "wasm" }

[profile.dev]
debug = true
split-debuginfo = "off"
