[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
serde_json = { workspace = true }
yaml-rust2 = "0.11"
glob = "0.3"

[lints]
workspace = true
