[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
anstream = "0.6"
anstyle = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde_json = { workspace = true }
yaml-rust2 = "0.11"
glob = "0.3"
regex = "1.12.3"
globset = "0.4.18"
toml = "0.9.11"
toml_edit = "0.23.10"

[lints]
workspace = true
