[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
anstream = "=0.6.21"
anstyle = "1.0"
clap = { version = "=4.5.60", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
yaml-rust2 = "0.11"
glob = "0.3"
regex = "1.12.3"
globset = "0.4.18"
ra-ap-rustc_lexer = "=0.150.0"
toml = "=0.9.12"
toml_edit = "=0.25.1"
quick-xml = "0.39.0"
semver = "1.0"

[dev-dependencies]
tempfile = "=3.25.0"

[lints]
workspace = true
