[package]
name = "tasklens-core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
autosurgeon.workspace = true
automerge.workspace = true

[dev-dependencies]
serde_yaml_ng = "0.10"
glob = "0.3"
path-clean = "1.0"
