[package]
name = "tasklens-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
[lints]
workspace = true

[dependencies]
tasklens-core = { path = "../tasklens-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
automerge.workspace = true
autosurgeon.workspace = true
uuid.workspace = true
tracing.workspace = true
samod = { workspace = true }
scopeguard = { workspace = true }

futures = "0.3"
hex = "0.4"
rand = "0.9"

# Crypto dependencies
bs58 = { version = "0.5.1", features = ["check"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Required to enable Web Crypto APIs for getrandom (v0.2 and v0.3).
# We isolate these here so that the web-specific shims and wasm-bindgen
# dependencies are only pulled in for the WASM target.
getrandom-v3.workspace = true
getrandom-v2.workspace = true
rexie = "0.6.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Location", "Performance"] }
serde-wasm-bindgen = "0.6"
gloo-net = { version = "0.6", features = ["websocket"] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
send_wrapper = { version = "0.6", features = ["futures"] }

[dev-dependencies]
pollster = "0.4.0"
criterion = { version = "0.8.1", features = ["async_tokio"] }
automerge-test = "0.6.0"
tokio = { version = "1", features = ["full"] }
proptest = "1.6"
proptest-derive = "0.5"
tempfile = "3.10"
tasklens-core = { path = "../tasklens-core", features = ["test-utils"] }

[[bench]]
name = "import_benchmark"
harness = false
