[package]
name = "tasklens-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
[lints]
workspace = true

[dependencies]
tasklens-core = { path = "../tasklens-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
automerge.workspace = true
autosurgeon.workspace = true
uuid.workspace = true
tracing.workspace = true
samod = { workspace = true }
scopeguard = { workspace = true }

futures = "0.3"
hex = "0.4"
rand = "0.9"
getrandom = { workspace = true }

# Crypto dependencies
bs58 = { version = "0.5.1", features = ["check"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom.workspace = true
rexie = "0.6.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Location", "Performance"] }
serde-wasm-bindgen = "0.6"
gloo-net = { version = "0.6", features = ["websocket"] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
send_wrapper = { version = "0.6", features = ["futures"] }

[dev-dependencies]
pollster = "0.4.0"
criterion = { version = "0.8.1", features = ["async_tokio"] }
automerge-test = "0.6.0"
tokio = { version = "1", features = ["full"] }
proptest = "1.9"
proptest-derive = "0.7"
tempfile = "3.24"
tasklens-core = { path = "../tasklens-core", features = ["test-utils"] }

[[bench]]
name = "import_benchmark"
harness = false
