[package]
name = "tasklens-store"
version.workspace = true
authors.workspace = true
edition.workspace = true
[lints]
workspace = true

[dependencies]
tasklens-core = { path = "../tasklens-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
automerge.workspace = true
autosurgeon.workspace = true
uuid.workspace = true
tracing.workspace = true
samod = { workspace = true }
samod-core = { workspace = true }
scopeguard = { workspace = true }

futures = "0.3"
hex = "0.4"
rand = "0.9"
getrandom = { workspace = true }

# Crypto dependencies
bs58 = { version = "0.5.1", features = ["check"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom.workspace = true
rexie = "0.6.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Location", "Performance"] }
serde-wasm-bindgen = "0.6"
gloo-net = { version = "0.6", features = ["websocket"] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
send_wrapper = { version = "0.6", features = ["futures"] }

[dev-dependencies]
pollster = "=0.4.0"
automerge-test = "=0.6.0"
proptest-derive = "=0.7.0"
tasklens-core = { path = "../tasklens-core", features = ["test-utils"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "=0.8.1", features = ["async_tokio"] }
tokio = { version = "=1.49.0", features = ["full"] }
tempfile = "=3.24.0"
proptest = "=1.9.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
proptest = { version = "=1.9.0", default-features = false, features = ["std"] }
