[package]
name = "tasklens-sync-server"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
argh = "0.1"
axum = { version = "0.8.1", features = ["ws"] }
futures = "0.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tasklens-sync-protocol = { path = "../tasklens-sync-protocol" }
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tower-http = { version = "0.6.2", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5.0"

[dev-dependencies]
tempfile = "3.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.100"
tokio-tungstenite = "0.28.0"
url = "2.5"
