[package]
name = "tasklens-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tasklens-core = { path = "../tasklens-core" }
tasklens-store = { path = "../tasklens-store" }
dioxus = { workspace = true, features = ["web"] }
dioxus-logger.workspace = true
tracing.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys.workspace = true
getrandom.workspace = true
futures.workspace = true
anyhow.workspace = true
console_error_panic_hook = "0.1.7"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
