[package]
name = "tasklens-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true
[lints]
workspace = true

[dependencies]
tasklens-core = { workspace = true }
tasklens-store = { workspace = true }
dioxus = { workspace = true, features = ["web", "router"] }
dioxus-logger = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["Window", "ServiceWorkerContainer", "ServiceWorker", "Navigator", "Location", "Storage", "IdbFactory", "Document", "HtmlDocument", "EventTarget", "Event"] }
futures = { workspace = true }
anyhow = { workspace = true }
console_error_panic_hook = { workspace = true }
rexie = "0.6.2"
base64 = "0.22"
gloo-net = "0.6"
gloo-storage = "0.3"
rand = { version = "0.9", features = ["std_rng"] }
hex = "0.4"
sha2 = "0.10.9"
gloo-timers = { version = "0.3", features = ["futures"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", rev = "7943bed2eb59ee43d713f935e0ba17989c02b992", version = "0.0.1", default-features = false, features = ["router"] }
automerge.workspace = true
samod = { workspace = true }
tokio = { version = "1", features = ["time"], optional = true }

[dev-dependencies]
tokio = { version = "=1.49.0", features = ["full"] }
pollster = "=0.4.0"
automerge-test = "=0.6.0"
proptest-derive = "=0.7.0"
tasklens-core = { path = "../tasklens-core", features = ["test-utils"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Required to enable Web Crypto features for transitive dependencies in WASM
getrandom.workspace = true

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "tokio"]
mobile = ["dioxus/mobile"]
pwa = []
tokio = ["dep:tokio"]

[build-dependencies]
chrono = { version = "0.4", features = ["now"] }
